--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -116,6 +116,7 @@
 \acro{HLT}{high level trigger}
 \acro{QCD}{quantum chromodynamics}
 \acro{BSM}{beyond the Standard Model}
+\acro{MSSM}{Minimal Supersymmetric Model}
 \end{acronym}
                    
 \endgroup
