--- a/thesis.bib
+++ b/thesis.bib
@@ -640,3 +640,11 @@
       primaryClass   = "astro-ph.GA",
       SLACcitation   = "%%CITATION = ARXIV:1408.1787;%%"
 }
+
+
+@article{lep_tdr,
+      title          = "{LEP Design Report Vol.1}",
+      year           = "1983",
+      reportNumber   = "CERN-LEP-TH-83-29, CERN-PS-DL-83-31, CERN-SPS-83-26, LAL-RT-83-09",
+      SLACcitation   = "%%CITATION = CERN-LEP-TH-83-29;%%"
+}
