Comments for chapter 6

--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -47,7 +47,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.54\xspace}
+\newcommand{\myVersion}{Version 0.55\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
@@ -80,7 +80,7 @@
 \newcommand{\mL}{\mathcal{L}}
 \newcommand{\mS}{\mathcal{S}}
 
-\newcommand*{\um}{\ensuremath{\mu\mathrm{m}}}
+\newcommand*{\um}{\ensuremath{\mu\mathrm{m}}\xspace}
 \newcommand*{\lcms}{\ensuremath{\mathrm{cm}^{-2}s^{-1}}}
 \newcommand*{\ipb}{\ensuremath{\mathrm{pb}^{-1}}}
 \newcommand*{\ifb}{\ensuremath{\mathrm{fb}^{-1}}}
