--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -88,8 +88,8 @@
 \acro{PSB}{Proton Synchrotron Booster}
 \acro{SPS}{Super Proton Synchrotron}
 \acro{SCT}{silicon microstrip}
-\acro{TRT}{transition radiation tracker}
-\acro{LAr}{Liquid Argon}
+\acro{TRT}{Transition Radiation Tracker}
+\acro{LAr}{liquid argon}
 \acro{EM}{electromagnetic}
 \acro{RPC}{Resistive Plate Chamber}
 \acro{TGC}{Thin Gap Chamber}
