Comments on chapter 7

--- a/axen_thesis.tex
+++ b/axen_thesis.tex
@@ -41,6 +41,7 @@
 
 \addbibresource{ATLAS.bib} 
 \addbibresource{ConfNotes.bib}
+\addbibresource{PubNotes.bib}
 \addbibresource{eoverp.bib} 
 \addbibresource{thesis.bib}
 
