--- a/thesis.bib
+++ b/thesis.bib
@@ -347,17 +347,6 @@
      SLACcitation  = "%%CITATION = HEP-PH/0603175;%%"
 }
 
-@techreport{ATL-PHYS-PUB-2011-014,
-      title         = "{Further ATLAS tunes of PYTHIA6 and Pythia 8}",
-      institution   = "CERN",
-      address       = "Geneva",
-      number        = "ATL-PHYS-PUB-2011-014",
-      month         = "Nov",
-      year          = "2011",
-      reportNumber  = "ATL-PHYS-PUB-2011-014",
-      url           = "https://cds.cern.ch/record/1400677",
-}
-
 @article{heavy_hadronization,
       author         = "Kraan, Aafke Christine",
       title          = "{Interactions of heavy stable hadronizing particles}",
@@ -647,4 +636,12 @@
       year           = "1983",
       reportNumber   = "CERN-LEP-TH-83-29, CERN-PS-DL-83-31, CERN-SPS-83-26, LAL-RT-83-09",
       SLACcitation   = "%%CITATION = CERN-LEP-TH-83-29;%%"
+}
+
+@article{atlas_extrapolation,
+      author         = "Salzburger, A.",
+      title          = "{The ATLAS Track Extrapolation Package}",
+      year           = "2007",
+      reportNumber   = "ATL-SOFT-PUB-2007-005, ATL-COM-SOFT-2007-010",
+      SLACcitation   = "%%CITATION = ATL-SOFT-PUB-2007-005;%%"
 }
