--- a/classicthesis-config.tex
+++ b/classicthesis-config.tex
@@ -31,6 +31,7 @@
 %	Each of the commands can be cited anywhere in the thesis
 %----------------------------------------------------------------------------------------
 
+%\PassOptionsToPackage{eulerchapternumbers,listings,subfig,beramono,parts,manychapters}{classicthesis}
 \PassOptionsToPackage{eulerchapternumbers,listings,drafting,subfig,beramono,parts,manychapters}{classicthesis}
 % Available options: drafting parts nochapters linedheaders eulerchapternumbers beramono eulermath pdfspacing minionprospacing tocaligned dottedtoc manychapters listings floatperchapter subfig
 % Might want to turn of xelatex and re-enable pdfspacing
@@ -47,7 +48,7 @@
 \newcommand{\myUni}{University of California, Berkeley\xspace}
 \newcommand{\myLocation}{Berkeley, CA\xspace}
 \newcommand{\myTime}{September 2016\xspace}
-\newcommand{\myVersion}{Version 0.56\xspace}
+\newcommand{\myVersion}{Version 0.57\xspace}
 
 %----------------------------------------------------------------------------------------
 %	USEFUL COMMANDS
