--- a/thesis.bib
+++ b/thesis.bib
@@ -645,3 +645,32 @@
       reportNumber   = "ATL-SOFT-PUB-2007-005, ATL-COM-SOFT-2007-010",
       SLACcitation   = "%%CITATION = ATL-SOFT-PUB-2007-005;%%"
 }
+
+@article{minisplit,
+      author         = "Arvanitaki, Asimina and Craig, Nathaniel and Dimopoulos, Savas and Villadoro, Giovanni",
+      title          = "{Mini-Split}",
+      journal        = "JHEP",
+      volume         = "02",
+      year           = "2013",
+      pages          = "126",
+      doi            = "10.1007/JHEP02(2013)126",
+      eprint         = "1210.0555",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      SLACcitation   = "%%CITATION = ARXIV:1210.0555;%%"
+}
+
+@article{spreadsusy,
+      author         = "Hall, Lawrence J. and Nomura, Yasunori and Shirai, Satoshi",
+      title          = "{Spread Supersymmetry with Wino LSP: Gluino and Dark Matter Signals}",
+      journal        = "JHEP",
+      volume         = "01",
+      year           = "2013",
+      pages          = "036",
+      doi            = "10.1007/JHEP01(2013)036",
+      eprint         = "1210.2395",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "MIT-CTP-4402, UCB-PTH-12-16",
+      SLACcitation   = "%%CITATION = ARXIV:1210.2395;%%"
+}
