--- a/axen_thesis.tex
+++ b/axen_thesis.tex
@@ -102,6 +102,7 @@
 
 \ctparttext{You can put some informational part preamble text here.}
 \part{Theoretical Context}
+\label{part:theory}
 
 \include{chapters/ch02_standardmodel}
 \include{chapters/ch03_supersymmetry}
@@ -109,20 +110,24 @@
 
 \ctparttext{You can put some informational part preamble text here.}
 \part{Experimental Structure and Reconstruction}
+\label{part:experiment}
 \include{chapters/ch05_lhc}
 \include{chapters/ch06_atlas}
 \include{chapters/ch07_reconstruction}
 
 \ctparttext{You can put some informational part preamble text here.}
 \part{Calorimeter Response}
+\label{part:calorimeter}
 \include{chapters/ch08_singlehadrons}
 \include{chapters/ch09_jes}
 
 \ctparttext{You can put some informational part preamble text here.}
 \part{Search for Long-Lived Particles}
+\label{part:llp}
 \include{chapters/ch10_simulation}
 \include{chapters/ch11_selection}
 \include{chapters/ch12_background}
+\include{chapters/ch13_systematics}
 \include{chapters/ch13_results}
 
 \ctparttext{You can put some informational part preamble text here.}
