--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -77,6 +77,9 @@
 \acro{SM}{Standard Model}
 \acro{CERN}{European Organization for Nuclear Research}
 \acro{SUSY}{Supersymmetry}
+\acro{MSSM}{Minimal Supersymmetric Model}
+\acro{cMSSM}{Constrained MSSM}
+\acro{pMSSM}{Phenomenological MSSM}
 \acro{LSP}{Lightest Supersymmetric Particle}
 \acro{LHC}{Large Hadron Collider}
 \acro{ATLAS}{A Toroidal LHC ApparatuS}
@@ -116,7 +119,6 @@
 \acro{HLT}{high level trigger}
 \acro{QCD}{quantum chromodynamics}
 \acro{BSM}{beyond the Standard Model}
-\acro{MSSM}{Minimal Supersymmetric Model}
 \end{acronym}
                    
 \endgroup
