--- a/thesis.bib
+++ b/thesis.bib
@@ -674,3 +674,30 @@
       reportNumber   = "MIT-CTP-4402, UCB-PTH-12-16",
       SLACcitation   = "%%CITATION = ARXIV:1210.2395;%%"
 }
+
+@article{mssm,
+      author = "Savas Dimopoulos and Howard Georgi",
+      title = "Softly broken supersymmetry and SU(5)",
+      journal = "Nuclear Physics B",
+      volume = "193",
+      number = "1",
+      pages = "150 - 162",
+      year = "1981",
+      note = "",
+      issn = "0550-3213",
+      doi = "http://dx.doi.org/10.1016/0550-3213(81)90522-8",
+}
+
+@inproceedings{pmssm,
+      author         = "Djouadi, A. and others",
+      title          = "{The Minimal supersymmetric standard model: Group summary report}",
+      booktitle      = "{GDR (Groupement De Recherche) - Supersymetrie Montpellier, France, April 15-17, 1998}",
+      collaboration  = "MSSM Working Group",
+      url            = "https://inspirehep.net/record/481987/files/arXiv:hep-ph_9901246.pdf",
+      year           = "1998",
+      eprint         = "hep-ph/9901246",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ph",
+      reportNumber   = "PM-98-45",
+      SLACcitation   = "%%CITATION = HEP-PH/9901246;%%"
+}
