Student comments and ATLAS fix.

--- a/thesis.bib
+++ b/thesis.bib
@@ -60,8 +60,7 @@
 
 @unpublished{lhc_guide,
       author        = "Lefevre, C",
-      title         = "{LHC: the guide (English version). Guide du LHC (version
-                       anglaise)}",
+      title         = "{LHC: the guide (English version). Guide du LHC (version anglaise)}",
       month         = "Feb",
       year          = "2009",
       reportNumber  = "CERN-Brochure-2009-003-Eng",
@@ -700,4 +699,11 @@
       primaryClass   = "hep-ph",
       reportNumber   = "PM-98-45",
       SLACcitation   = "%%CITATION = HEP-PH/9901246;%%"
+}
+
+@unpublished{unification_plot,
+      author        = "Nobelprize.org",
+      title         = "{The 2004 Nobel Prize in Physics - Popular Information}",
+      year          = "2014",
+      url           = "https://cds.cern.ch/record/1165534",
 }
