--- a/axen_thesis.tex
+++ b/axen_thesis.tex
@@ -137,7 +137,7 @@
 \appendix
 
 \part{Appendix}
-\include{chapters/app0A_inelastic}
+%\include{chapters/app0A_inelastic}
 \include{chapters/app0B_yields}
 
 %----------------------------------------------------------------------------------------
@@ -146,9 +146,8 @@
 
 \cleardoublepage\include{frontback/Bibliography} % Bibliography
 
-\cleardoublepage\include{frontback/Declaration} % Declaration
-
-\cleardoublepage\include{frontback/Colophon} % Colophon
+%\cleardoublepage\include{frontback/Declaration} % Declaration
+%\cleardoublepage\include{frontback/Colophon} % Colophon
 
 %----------------------------------------------------------------------------------------
 
