--- a/frontback/Contents.tex
+++ b/frontback/Contents.tex
@@ -106,6 +106,8 @@
 \acro{EPJC}{European Physical Journal C}
 \acro{JES}{jet energy scale}
 \acro{LLP}{Long-Lived Particle}
+\acro{LL}{long-lived}
+\acro{VLL}{very long-lived}
 \acro{CR}{Control Region}
 \acro{NLO}{next-to-leading order}
 \acro{NLL}{next-to-leading logarithmic}
