Comments through results.

--- a/ATLAS.bib
+++ b/ATLAS.bib
@@ -7937,3 +7937,14 @@
     addendum       = "SUSY-2016-03",
 }
 
+@article{DAPR-2013-01,
+      author         = "{ATLAS Collaboration}",
+      title          = "{Luminosity determination in pp collisions at $\sqrt{s}$ = 8 TeV using the ATLAS detector at the LHC}",
+      collaboration  = "ATLAS",
+      year           = "2016",
+      eprint         = "1608.03953",
+      archivePrefix  = "arXiv",
+      primaryClass   = "hep-ex",
+      reportNumber   = "CERN-EP-2016-117",
+      SLACcitation   = "%%CITATION = ARXIV:1608.03953;%%"
+}
